--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
+    "dev": "webpack-dev-server --color --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Milo Mordaunt <milomord@gmail.com>",
@@ -12,7 +13,6 @@
   "dependencies": {
     "babel": "^5.5.6",
     "babelify": "^6.1.2",
-    "browserify-middleware": "^5.0.2",
     "express": "^4.12.4",
     "flummox": "^3.5.2",
     "immutable": "^3.7.3",
@@ -20,7 +20,8 @@
     "react-router": "^0.13.3"
   },
   "devDependencies": {
-    "browser-sync": "^2.7.12",
-    "gulp": "^3.9.0"
+    "babel-loader": "^5.1.4",
+    "react-hot-loader": "^1.2.7",
+    "webpack-dev-server": "^1.9.0"
   }
 }
